Colaboratory を使用して作成しました

--- a/cpp_bitsetsearch.ipynb
+++ b/cpp_bitsetsearch.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_bitsetsearch.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMwxfWRYWMAxzbA1A623zWA",
+      "authorship_tag": "ABX9TyP13K07MN13HcYqD8ooc9tS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -127,7 +127,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 部分和を全探索のテンプレート通りにやってみる\n",
+        "# 部分和を普通の bitset 全探索でやってみる\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -141,7 +141,7 @@
         "    // N 桁の全探索ですべての場合について合計が K になるかを調べる\n",
         "    bool flag = false;\n",
         "    for (int tmp = 0; tmp < (1 << N); tmp++) {\n",
-        "        bitset<4> bs(tmp);\n",
+        "        bitset<20> bs(tmp);\n",
         "        int sum = 0;\n",
         "        for (int i = 0; i < N ; i++) {\n",
         "            if (bs.test(i)) sum += vec.at(i);\n",
@@ -155,12 +155,12 @@
       ],
       "metadata": {
         "id": "03gFjHsSn7gB",
-        "outputId": "186ff624-261f-409f-f80e-81fc09adc6b6",
+        "outputId": "1abe2058-cb08-4760-b48d-99b9129cc51d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,7 +175,10 @@
       "cell_type": "code",
       "source": [
         "!g++ temp.cpp; echo 3 11 7 2 9 |./a.out #=> Yes\n",
-        "!g++ temp.cpp; echo 2 11 5 7 |./a.out #=> No"
+        "!g++ temp.cpp; echo 2 11 5 7 |./a.out #=> No\n",
+        "!g++ temp.cpp; echo 5 11 2 8 4 2 9 |./a.out #=> YES\n",
+        "!g++ temp.cpp; echo 5 3 2 8 4 2 9 |./a.out #=> NO\n",
+        "!g++ temp.cpp; echo 5 25 2 8 4 2 9 |./a.out #=> YES"
       ],
       "metadata": {
         "id": "WfDGdZMboGqW",
@@ -199,7 +202,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 全探索のテンプレート\n",
+        "# bitset 全探索\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -421,15 +424,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ\n"
-      ],
-      "metadata": {
-        "id": "aObux_AAx9WY"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 0〜15の二進数表記は以下の通りです。二進数に不慣れな人は確認してみてください。\n",
@@ -495,7 +489,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -518,7 +512,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -570,7 +564,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -593,7 +587,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -643,7 +637,7 @@
           "height": 342
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -788,7 +782,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -868,19 +862,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 6行目はtmpという変数を0から始めて8になるまでのfor文です。 \n",
-        "# 1 << 3は、2の3乗を得るための式です。 \n",
-        "# 1を3ビット左シフトすると、ビット列は「1000」となり、\n",
-        "# これを2進数として解釈すると2の3乗=8になります。\n",
-        "\n",
-        "# 2のk乗の値を得るために、1 << kという書き方をすることがよくあります。\n",
-        "# シンプルな形なので覚えておきましょう。\n",
-        "\n",
-        "# 7行目では、tmpをビット列として解釈してbitset<3>型のsを初期化しています。\n",
-        "\n",
-        "# 9行目ではsのビット列を出力しています。\n",
-        "\n",
-        "# 0から7のビット列は次のようになっています。\n",
+        "# 0から7のビット列は次のようになっている\n",
         "%%html\n",
         "<table border=\"1\">\n",
         "<tbody>\n",
@@ -921,115 +903,23 @@
     {
       "cell_type": "code",
       "source": [
-        "# これらの中に長さ3のビット列が全て現れているということが分かります。\n",
-        "\n",
-        "# より一般には、0から2^N−1の範囲でループすることで、 \n",
-        "# 長さNのビット列をすべて列挙することができます。\n",
-        "\n",
-        "# ビット全探索の雛形\n",
-        "# 次の形でビット全探索を行うことができます。\n",
-        "\n",
-        "# for (int tmp = 0; tmp < (1 << ビット数); tmp++) {\n",
-        "#   bitset<ビット数> s(tmp);\n",
-        "#   // (ビット列sに対する処理)\n",
-        "# }\n",
-        "\n",
-        "# bitsetの長さの指定に変数は使えないことに注意してください。\n",
-        "\n",
-        "# また、このアルゴリズムはビット列の長さを N として、少なくとも 2^N 回以上の\n",
-        "# ループになるので計算量に注意しましょう。\n",
-        "\n",
-        "# 例題\n",
-        "# A^1,A^2,⋯,A^N のN個の整数が与えられます。 これらの整数からいくつかを選んで、\n",
-        "# その総和がKとなるような選び方が存在するかを求めてください。\n",
-        "# 総和がKとなるような整数の組合せが存在するなら1行に YES を、そうでなければ NO を出力してください。\n"
-      ],
-      "metadata": {
-        "id": "kbUp7ArWRiFF"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# 解答例\n",
-        "%%writefile temp.cpp\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        " \n",
-        "int main () {\n",
-        "  int N, K;\n",
-        "  cin >> N >> K;\n",
-        "  vector<int> A(N);\n",
-        "  for (int i = 0; i < N; i++) {\n",
-        "    cin >> A.at(i);\n",
-        "  }\n",
-        " \n",
-        "  bool ans = false;\n",
-        " \n",
-        "  // すべての選び方を試して、総和がKになるものがあるかを調べる\n",
-        "  for (int tmp = 0; tmp < (1 << 20); tmp++) {\n",
-        "    bitset<20> s(tmp);  // 最大20個なので20ビットのビット列として扱う, 変数 N は使えない\n",
-        " \n",
-        "    // ビット列の1のビットに対応する整数を選んだとみなして総和を求める\n",
-        "    int sum = 0;\n",
-        "    for (int i = 0; i < N; i++) {\n",
-        "      if (s.test(i)) {\n",
-        "        sum += A.at(i);\n",
-        "      }\n",
-        "    }\n",
-        "    if (sum == K) {\n",
-        "      ans = true;\n",
-        "    }\n",
-        "  }\n",
-        " \n",
-        "  if (ans) {\n",
-        "    cout << \"YES\" << endl;\n",
-        "  } else {\n",
-        "    cout << \"NO\" << endl;\n",
-        "  }\n",
-        "}"
-      ],
-      "metadata": {
-        "id": "lbNl2ylvS_VI"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!g++ temp.cpp; echo 5 11 2 8 4 2 9 |./temp #=> YES\n",
-        "!g++ temp.cpp; echo 5 3 2 8 4 2 9 |./temp #=> NO\n",
-        "!g++ temp.cpp; echo 5 25 2 8 4 2 9 |./temp #=> YES"
-      ],
-      "metadata": {
-        "id": "iVbbLUSxSfS1"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# bitsetと整数の相互変換\n",
         "# 整数からbitsetへの変換\n",
-        "# bitsetのコンストラクタに整数を渡すことで整数をビット列としてみなしてbitsetに変換することができます。\n",
+        "# bitsetのコンストラクタに整数を渡すことで整数をビット列としてみなしてbitsetに変換することが出来る\n",
         "\n",
         "# bitset<ビット数> 変数名(整数);\n",
         "\n",
         "# bitsetから整数への変換\n",
-        "# mapのKeyとして使う場合や四則演算を行う場合に、bitsetを整数に変換したいことがあります。\n",
-        "# このような場合には、bitsetのto_ullong関数を用います。\n",
+        "# mapのKeyとして使う場合や四則演算を行う場合に、bitsetを整数に変換したいことがある\n",
+        "# このような場合には、bitsetのto_ullong関数を用いる\n",
         "\n",
         "# bitsetの変数.to_ullong()\n",
-        "# bitsetのビット数が64ビットを超えている場合は、整数に変換できずに実行時エラーになります。\n",
+        "# bitsetのビット数が64ビットを超えている場合は、整数に変換できずに実行時エラーになる\n",
         "\n",
         "# 2進数リテラル\n",
-        "# 2進数リテラルを用いることで、2進数表記で整数を書くことができます。\n",
+        "# 2進数リテラルを用いることで、2進数表記で整数を書くことが出来る\n",
         "\n",
-        "# 2進数リテラルは0b0101や0b11111111のように、0bに続けて01のビット列を書きます。\n",
+        "# 2進数リテラルは0b0101や0b11111111のように、0bに続けて01のビット列を書く\n",
         "\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
@@ -1043,10 +933,22 @@
         "}"
       ],
       "metadata": {
-        "id": "dbTlJoKGTFUK"
+        "id": "dbTlJoKGTFUK",
+        "outputId": "505a891e-b9d1-4ede-f350-de660d00aaf8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1054,10 +956,23 @@
         "!g++ temp.cpp; ./a.out"
       ],
       "metadata": {
-        "id": "pj-P7ZlATj3e"
+        "id": "pj-P7ZlATj3e",
+        "outputId": "a30d8b6c-de68-4ef1-ccf3-408423340605",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "6\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1074,9 +989,9 @@
         "# 64ビットを超える場合でも、計算量から見積もられる実行時間より高速に動作することが多いです。\n",
         "\n",
         "# 負の整数の右シフト\n",
-        "# 論理右シフトでは、空いたビットは0で埋められるということを説明しましたが、 \n",
+        "# 論理右シフトでは、空いたビットは0で埋められるということを説明したが、 \n",
         "# 負の数を右シフトした場合には、空いたビットは基本的に1で埋められます。 \n",
-        "# この動作を算術右シフトといいます。\n"
+        "# この動作を算術右シフトと言う\n"
       ],
       "metadata": {
         "id": "sUN-L4dBTYTR"
@@ -1087,10 +1002,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# EX25 - 集合の操作 \n",
-        "# 0から49までの整数からなる集合A, Bがあります。\n",
-        "# プログラムの雛形をもとに、集合A,Bに対して操作を行う関数を実装してください。\n",
-        "# 実装する操作は以下の通りです。\n",
+        "# 問題 EX25 - 集合の操作 \n",
+        "# 0 から 49 までの整数からなる集合 A, B がある\n",
+        "# プログラムの雛形をもとに、集合 A,B に対して操作を行う関数を実装する\n",
+        "# 実装する操作は以下の通り\n",
         "%%html\n",
         "<style>\n",
         "    tr td:nth-child(1) {\n",
@@ -1119,26 +1034,77 @@
         "</tbody>"
       ],
       "metadata": {
-        "id": "KL6Opnx8gS9C"
+        "id": "KL6Opnx8gS9C",
+        "outputId": "d795dfbd-c8c4-46cb-ed3d-a18f546bda76",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 216
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    tr td:nth-child(1) {\n",
+              "        color: red;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" style=\"width: 90%\">\n",
+              "<thead>\n",
+              "<tr><th>操作</th><th style=\"width: 50%\">説明</th><th>例</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "<tr><td>intersection</td><td>AとBに共通して含まれる要素からなる集合を返す。\n",
+              "    </td><td>A: {1,2,3}, B:{2,3,4} 結果:{2,3}</td></tr>\n",
+              "<tr><td>union_set</td><td>AとBのうち少なくとも一方に含まれる要素からなる集合を返す。\n",
+              "    </td><td>A: {1,2,3}, B:{2,3,4} 結果:{1,2,3,4}</td></tr>\n",
+              "<tr><td>symmetric_diff</td><td>AとBのうちどちらか一方にだけ含まれる要素からなる集合を返す。\n",
+              "    </td><td>A: {1,2,3}, B:{2,3,4} 結果:{1,4}</td></tr>\n",
+              "<tr><td>subtract x</td><td>集合Aから値xを削除する。xは存在することが保証される。\n",
+              "    </td><td>A: {1,2,3}, x: 2 結果:{1,3}</td></tr>\n",
+              "<tr><td>increment</td><td>集合Aに含まれる要素すべてに1を加える。ただし、\n",
+              "    <strong>操作前の集合に含まれる49は操作後は0になるものとする</strong>。\n",
+              "    </td><td>A: {1,2,49} 結果:{2,3,0}</td></tr>\n",
+              "<tr><td>decrement</td><td>集合Aに含まれる要素すべてから1を引く。ただし、\n",
+              "    <strong>操作前の集合に含まれる0は操作後は49になるものとする</strong>。<\n",
+              "        /td><td>A: {0,1,2} 結果:{49,0,1}</td></tr>\n",
+              "</tbody>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# ヒント\n",
-        "# * intersectionはビット毎のAND演算を用いて実装できます。\n",
-        "# * union_setはビット毎のOR演算を用いて実装できます。\n",
-        "# * symmetric_diffはビット毎のXOR演算を用いて実装できます。\n",
-        "# * subtract xはSを表すビット列のxビット目を0にすればよいです。\n",
-        "# * increment, decrementは全ての要素が1ずつ増える（減る）ので論理シフト演算が利用できます。"
+        "# * intersectionはビット毎の AND 演算を用いて実装\n",
+        "# * union_setはビット毎の OR 演算を用いて実装\n",
+        "# * symmetric_diffはビット毎の XOR 演算を用いて実装\n",
+        "# * subtract x は S を表すビット列の x ビット目を0にすればよい\n",
+        "# * increment, decrementは全ての要素が1ずつ増える（減る）ので論理シフト演算が利用"
       ],
       "metadata": {
         "id": "H_pTZ-mY4XPI"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "u5ngyd8HNzq2"
+      }
     },
     {
       "cell_type": "code",
@@ -1148,7 +1114,6 @@
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
-        "// 各操作を行う関数を実装する\n",
         "\n",
         "// AとBに共通して含まれる要素からなる集合を返す\n",
         "bitset<50> intersection(bitset<50> A, bitset<50> B) {\n",
