--- a/cpp_bitsetsearch.ipynb
+++ b/cpp_bitsetsearch.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_bitsetsearch.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM77zu5Za6erQYAFVvNs942",
+      "authorship_tag": "ABX9TyNZyd43G+qZO8aRIFp52SqB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1590,75 +1590,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "これを改造する\n",
-        "\n",
-        "# 問題 ABC079 C - Train Ticket をビット演算で解く\n",
-        "# 駅の待合室に座っている joisino お姉ちゃんは、切符を眺めています。\n",
-        "# 切符には 4 つの 0 以上 9 以下の整数 A,B,C,D が整理番号としてこの順に書かれています。\n",
-        "# A op1 B op2 C op3 D = 7 となるように、op1,op2,op3 に + か - を入れて式を作って下さい。\n",
-        "# なお、答えが存在しない入力は与えられず、また答えが複数存在する場合はどれを出力してもよいものとします。\n",
-        "# 作った式を、= 7 の部分を含めて出力せよ。\n",
-        "%%writefile temp.cpp\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "\n",
-        "int main() {\n",
-        "  int abcd;\n",
-        "  cin >> abcd;\n",
-        "  vector<int> ticket(4);\n",
-        "\n",
-        "  for(int i = 3; i > -1; i--){\n",
-        "    ticket[i] = (abcd%10); // 1桁取り出していく\n",
-        "    abcd /= 10;\n",
-        "  }\n",
-        "\n",
-        "  for(int bit = 0; bit < (1 << 3); bit++){\n",
-        "    int ans = ticket[0];\n",
-        "\n",
-        "    for(int idx = 0; idx < 3; idx++){\n",
-        "      if(bit & (1 << idx)) ans += ticket[idx + 1];\n",
-        "\n",
-        "      else ans -= ticket[idx + 1];\n",
-        "    }\n",
-        "\n",
-        "    if(ans == 7){\n",
-        "      cout << ticket[0];\n",
-        "\n",
-        "      for(int idx = 0; idx < 3; idx++){\n",
-        "        if(bit & (1 << idx)) cout << '+';\n",
-        "        else cout << '-';\n",
-        "\n",
-        "        cout << ticket[idx + 1];\n",
-        "      }\n",
-        "\n",
-        "      cout << \"=7\" << endl;\n",
-        "      break;\n",
-        "    }\n",
-        "  }\n",
-        "}"
-      ],
-      "metadata": {
-        "id": "P_hOEcnK6dbP"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!g++ temp.cpp; echo 1222 |./a.out #=> 1+2+2+2=7\n",
-        "!g++ temp.cpp; echo 0290 |./a.out #=> 0-2+9+0=7\n",
-        "!g++ temp.cpp; echo 3242 |./a.out #=> 3+2+4-2=7"
-      ],
-      "metadata": {
-        "id": "oGWFP_SNeYB2"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# いまここ"
@@ -1680,65 +1611,35 @@
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
-        "long value(string str, bitset<50> s){\n",
-        "    long result = 0;\n",
-        "    string tempString = \"\";\n",
-        "    if (str == \"\") return result;\n",
-        "    for (int i=0; i < s.size(); i++){\n",
-        "        if (i < str.size()) tempString += str.at(i);\n",
-        "        if (s.test(i)) {\n",
-        "            result += stoi(tempString);\n",
-        "            tempString = \"\";\n",
-        "        }\n",
-        "    }\n",
-        "    result += stoll(tempString);\n",
-        "    return result;\n",
-        "}\n",
-        "\n",
-        "string expression(string str, bitset<50> s){\n",
-        "    string result = \"\";\n",
-        "    if (str == \"\") return result;\n",
-        "    for (int i=0; i < s.size(); i++){\n",
-        "            if (i < str.size()) result += str.at(i);\n",
-        "            if (s.test(i)) result += \"+\";\n",
-        "    }\n",
-        "    return result;\n",
-        "}\n",
-        "\n",
         "int main() {\n",
-        "  int abcd;\n",
-        "  cin >> abcd;\n",
-        "  vector<int> ticket(4);\n",
+        "    int abcd;\n",
+        "    cin >> abcd;\n",
+        "    vector<int> ticket(4);\n",
         "\n",
-        "  for(int i = 0; i < 4; i++){\n",
-        "    ticket[i] = abcd / pow(10, (3 - i));\n",
-        "    abcd = abcd - ticket.at(i) * pow(10, (3 - i));\n",
-        "  }\n",
-        "\n",
-        "\n",
-        "  for(int bit = 0; bit < (1 << 3); bit++){\n",
-        "    int ans = ticket[0];\n",
-        "\n",
-        "    for(int idx = 0; idx < 3; idx++){\n",
-        "      if(bit & (1 << idx)) ans += ticket[idx + 1];\n",
-        "\n",
-        "      else ans -= ticket[idx + 1];\n",
+        "    for(int i = 0; i < 4; i++){\n",
+        "        ticket[i] = abcd / pow(10, (3 - i));\n",
+        "        abcd = abcd - ticket.at(i) * pow(10, (3 - i));\n",
         "    }\n",
         "\n",
-        "    if(ans == 7){\n",
-        "      cout << ticket[0];\n",
-        "\n",
-        "      for(int idx = 0; idx < 3; idx++){\n",
-        "        if(bit & (1 << idx)) cout << '+';\n",
-        "        else cout << '-';\n",
-        "\n",
-        "        cout << ticket[idx + 1];\n",
-        "      }\n",
-        "\n",
-        "      cout << \"=7\" << endl;\n",
-        "      break;\n",
+        "    // 全探索 0 を + , 1 を - として計算する\n",
+        "    for (int tmp = 0; tmp < (1 << 3); tmp++) {\n",
+        "        bitset<3> s(tmp);\n",
+        "        int sum = ticket.at(0);\n",
+        "        for (int i = 0; i < s.size(); i++) {\n",
+        "            if (s.test(i)) sum += ticket.at(i + 1);\n",
+        "            else sum -= ticket.at(i + 1);\n",
+        "        }\n",
+        "        if (sum == 7) {\n",
+        "            cout << ticket[0];\n",
+        "            for (int i = 0; i < s.size(); i++) {\n",
+        "                if (s.test(i))  cout << '+';\n",
+        "                else cout << '-';\n",
+        "                cout << ticket[i + 1];\n",
+        "            }\n",
+        "            cout << \"=7\" << endl;\n",
+        "            break;\n",
+        "        } \n",
         "    }\n",
-        "  } \n",
         "}"
       ],
       "metadata": {
@@ -1746,9 +1647,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yYDCrpwT06w6",
-        "outputId": "8b475aa2-9601-43a1-941a-462e3d1e9b54"
+        "outputId": "b1c6a9e4-7e77-436c-82c4-cc2365f6ac07"
       },
-      "execution_count": 29,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -1763,23 +1664,27 @@
       "cell_type": "code",
       "source": [
         "!g++ temp.cpp; echo 1222 |./a.out #=> 1+2+2+2=7\n",
-        "# !g++ temp.cpp; echo 0290 |./a.out #=> 0-2+9+0=7\n",
-        "# !g++ temp.cpp; echo 3242 |./a.out #=> 3+2+4-2=7"
+        "!g++ temp.cpp; echo 0290 |./a.out #=> 0-2+9+0=7\n",
+        "!g++ temp.cpp; echo 3242 |./a.out #=> 3+2+4-2=7"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "h9sfwf-h06m6",
-        "outputId": "b87473a6-ad4c-4a9f-9555-bfd08a54f5c4"
+        "outputId": "8e54970a-97b5-4954-c3fc-b888161e2aca"
       },
-      "execution_count": 30,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1+2+2+2=7\n"
+            "1+2+2+2=7\n",
+            "0-2+9-0=7\n",
+            "0-2+9+0=7\n",
+            "3+2+4-2=7\n",
+            "3-2+4+2=7\n"
           ]
         }
       ]
@@ -1787,12 +1692,44 @@
     {
       "cell_type": "code",
       "source": [
-        "# ABC104 C - All Green をビット演算で解く\n",
+        "# 問題 ABC104 C - All Green をビット演算で解く\n",
+        "# 問題集の問題に、難易度に応じて点数が付けられています。 \n",
+        "# 現在、1 以上 D 以下のそれぞれの整数 i に対して、100 * i 点を付けられた問題が p_i 問存在します\n",
+        "# ユーザーの総合スコアは、以下の 2 つの要素の和です。\n",
+        "# 基本スコア: ユーザーが解いた問題すべての配点の合計です。\n",
+        "# コンプリートボーナス: 100i 点を付けられた p_i 問の問題すべてを解いたユーザーは、\n",
+        "# 基本スコアと別にコンプリートボーナス c_i 点を獲得します (1 ≤ i ≤ D)。\n",
+        "# 総合スコアを G 点以上にするために解く必要のある最小の問題数を出力せよ。\n",
+        "# 入力は D G p_i c_i ...\n"
+      ],
+      "metadata": {
+        "id": "Fg6qTn1KeXbo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 2 700 3 500 5 800 |./a.out #=> 3\n",
+        "# !g++ temp.cpp; echo 2 2000 3 500 5 800 |./a.out #=> 7\n",
+        "# !g++ temp.cpp; echo 2 400 3 500 5 800 |./a.out #=> 2\n",
+        "# !g++ temp.cpp; echo 5 25000 20 1000 40 1000 50 1000 30 1000 1 1000 |./a.out #=> 66"
+      ],
+      "metadata": {
+        "id": "WujPeLIKMZke"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# ARC029 A - 高橋君とお肉 をビット演算で解く\n",
         "# ABC002 D - 派閥 をビット演算で解く"
       ],
       "metadata": {
-        "id": "Fg6qTn1KeXbo"
+        "id": "l9EMU96lHcR0"
       },
       "execution_count": null,
       "outputs": []
