--- a/cpp_bitsetsearch.ipynb
+++ b/cpp_bitsetsearch.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_bitsetsearch.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOEJvVJc7nbUoHMbiG/CfcH",
+      "authorship_tag": "ABX9TyPOKG0e8GThqYjXSe+qmTkY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1550,7 +1550,7 @@
         },
         "outputId": "6e09159b-efeb-41c6-c2bf-40fc6dd29a90"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1574,7 +1574,7 @@
         },
         "outputId": "0ef3dc94-c7c1-4538-ec2e-3465aceb558f"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1640,7 +1640,7 @@
         "id": "yYDCrpwT06w6",
         "outputId": "b1c6a9e4-7e77-436c-82c4-cc2365f6ac07"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1665,7 +1665,7 @@
         "id": "h9sfwf-h06m6",
         "outputId": "8e54970a-97b5-4954-c3fc-b888161e2aca"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1688,7 +1688,7 @@
         "# 現在、1 以上 D 以下のそれぞれの整数 i に対して、100 * i 点を付けられた問題が p_i 問存在します\n",
         "# ユーザーの総合スコアは、以下の 2 つの要素の和です。\n",
         "# 基本スコア: ユーザーが解いた問題すべての配点の合計です。\n",
-        "# コンプリートボーナス: 100i 点を付けられた p_i 問の問題すべてを解いたユーザーは、\n",
+        "# コンプリートボーナス: 100 * i 点を付けられた p_i 問の問題すべてを解いたユーザーは、\n",
         "# 基本スコアと別にコンプリートボーナス c_i 点を獲得します (1 ≤ i ≤ D)。\n",
         "# 総合スコアを G 点以上にするために解く必要のある最小の問題数を出力せよ。\n",
         "# 入力は D G p_i c_i ...\n",
@@ -1701,7 +1701,7 @@
         },
         "outputId": "62277d24-b006-4618-a496-ac6649212ee4"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1715,6 +1715,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#@title\n",
         "これを改造する\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
@@ -1758,10 +1759,83 @@
         "}"
       ],
       "metadata": {
-        "id": "syDv1oLMU0fU"
+        "id": "syDv1oLMU0fU",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title\n",
+        "---\n",
+        "# 問題 ABC104 C - All Green をビット演算で解く\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "    // 入力\n",
+        "    int D, G;\n",
+        "    cin >> D >> G;\n",
+        "    // int p[D], c[D];\n",
+        "    vector<int> p(D);\n",
+        "    vector<int> c(D);\n",
+        "    for (int i = 0; i < D; i++) {\n",
+        "        cin >> p.at(i) >> c.at(i);\n",
+        "    }\n",
+        "\n",
+        "    int n = 1<<D;\n",
+        "    int best = INT32_MAX; // 最小の数を求めるのでデフォルトは十分大きな数\n",
+        "\n",
+        "    for (int i = 0; i < n; i++) {\n",
+        "        int t = 0; // 回数\n",
+        "        int s = 0; // 得点\n",
+        "\n",
+        "        for (int j = 0; j < D; j++) {\n",
+        "            if ((i & (1 << j))) {\n",
+        "                t += p.at(j);\n",
+        "                s += (j + 1) * 100 * p.at(j) + c.at(j);\n",
+        "            }\n",
+        "        }\n",
+        "\n",
+        "        for (int j = D - 1; j >= 0; j--) {\n",
+        "            if ((i & (1 << j)) == 0 && s < G) {\n",
+        "                if ((G - s) / 100 <= p.at(j) * (j + 1)) {\n",
+        "                    t += max(1, (G - s) / 100 / (j + 1));\n",
+        "                    s = G;\n",
+        "                }\n",
+        "                break;\n",
+        "            }\n",
+        "        }\n",
+        "\n",
+        "        if (best > t && s >= G) {\n",
+        "            best = t;\n",
+        "        }\n",
+        "    }\n",
+        "    cout << best << \"\\n\";\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "EFM67s2TU8Ve",
+        "outputId": "fc6d5cd5-81c1-42b4-92c2-1f3e8523c578",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
+        "cellView": "form"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1781,50 +1855,47 @@
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
+        "int D;\n",
+        "long G;\n",
+        "vector<long> p, c;\n",
+        "\n",
         "int main() {\n",
-        "    int D, G;\n",
-        "    cin >> D >> G;\n",
-        "    // int p[D], c[D];\n",
-        "    vector<int> p(D);\n",
-        "    vector<int> c(D);\n",
-        "    for (int i = 0; i < D; i++) {\n",
-        "        cin >> p[i] >> c[i];\n",
+        "  cin >> D >> G;\n",
+        "  p.resize(D); c.resize(D);\n",
+        "  for (int i = 0; i < D; ++i) cin >> p[i] >> c[i];\n",
+        "\n",
+        "  long res = 1<<29;\n",
+        "  for (int bit = 0; bit < (1 << D); ++bit) { // \n",
+        "    long sum = 0; \n",
+        "    long num = 0;\n",
+        "    bitset<10> bs(bit);\n",
+        "    for (int i = 0; i < D; ++i) {\n",
+        "      if (bit & (1 << i)) sum += c[i] + p[i] * 100 * (i+1), num += p[i];\n",
         "    }\n",
-        "    int n = 1<<D;\n",
-        "    int best = INT32_MAX;\n",
-        "    for (int i = 0; i < n; i++) {\n",
-        "        int t = 0;\n",
-        "        int s = 0;\n",
-        "        for (int j = 0; j < D; j++) {\n",
-        "            if ((i & (1<<j))) {\n",
-        "                t += p[j];\n",
-        "                s += (j + 1) * 100 * p[j]+ c[j];\n",
-        "            }\n",
+        "    if (sum >= G) res = min(res, num);\n",
+        "    else {\n",
+        "      for (int i = D-1; i >= 0; --i) {\n",
+        "        if (bit & (1<<i)) continue;\n",
+        "        for (int j = 0; j < p[i]; ++j) {\n",
+        "          if (sum >= G) break;\n",
+        "          sum += 100 * (i+1);\n",
+        "          ++num;\n",
         "        }\n",
-        "        for (int j = D - 1; j >= 0; j--) {\n",
-        "            if ((i & (1<<j)) == 0 && s < G) {\n",
-        "                if ((G - s) / 100 <= p[j] * (j + 1)) {\n",
-        "                    t += max(1, (G - s) / 100 / (j + 1));\n",
-        "                    s = G;\n",
-        "                }\n",
-        "                break;\n",
-        "            }\n",
-        "        }\n",
-        "        if (best > t && s >= G) {\n",
-        "            best = t;\n",
-        "        }\n",
+        "      }\n",
+        "      res = min(res, num);\n",
         "    }\n",
-        "    cout << best << \"\\n\";\n",
+        "  }\n",
+        "  cout << res << endl;\n",
         "}"
       ],
       "metadata": {
-        "id": "EFM67s2TU8Ve",
-        "outputId": "ebfdaff3-85ee-40c8-d78b-1f2f680cc53f",
+        "id": "DAUoQoPjVVXm",
+        "outputId": "deb47600-dc0a-479d-e8c9-ec10de0a2520",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 61,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1848,9 +1919,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WujPeLIKMZke",
-        "outputId": "a520f61b-c908-4274-d82b-f10153e88852"
+        "outputId": "e904edfd-c9c7-480e-b17f-2cc6b685a822"
       },
-      "execution_count": 62,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
