--- a/cpp_bitsetsearch.ipynb
+++ b/cpp_bitsetsearch.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_bitsetsearch.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMGz/S/rVZ1ee1SIOROmbc6",
+      "authorship_tag": "ABX9TyN2wIOJdyqXl7BG/lRafxaK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1893,6 +1893,7 @@
     {
       "cell_type": "code",
       "source": [
+        "---\n",
         "# 問題 ABC002 D - 派閥 をビット演算で解く\n",
         "# N 人の国会議員と、M 個の人間関係 (x, y) が存在します。\n",
         "# 人間関係 (x, y) とは、議員 x と議員 y が知り合いであることを意味します。\n",
@@ -1909,62 +1910,176 @@
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
-        "typedef long long ll;\n",
-        "int N, M;\n",
-        "int bit[12]{};\n",
-        "int G[12][12]{};\n",
-        "int ans = 1;\n",
-        "\n",
-        "void solve() {\n",
-        "  for (int i = 0; i < N; i++) {\n",
-        "    if (bit[i] == 0) continue;\n",
-        "    for (int j = 0; j < N; j++) {\n",
-        "      if (bit[j] == 1 && G[i][j] == 0) return;\n",
-        "    }\n",
-        "  }\n",
-        "  int sum = 0;\n",
-        "  for (int i = 0; i < N; i++) {\n",
-        "    if (bit[i] == 1) sum++;\n",
-        "  }\n",
-        "  ans = max(ans, sum);\n",
-        "}\n",
-        "\n",
-        "void rec(int k) {\n",
-        "  if (k == N) {\n",
-        "    solve();\n",
-        "    return;\n",
-        "  }\n",
-        "  rec(k + 1);\n",
-        "  bit[k] = 1;\n",
-        "  rec(k + 1);\n",
-        "  bit[k] = 0;\n",
-        "}\n",
-        "\n",
         "int main() {\n",
-        "  cin >> N >> M;\n",
-        "  int x, y;\n",
-        "  for (int i = 0; i < N; i++) {\n",
-        "    G[i][i] = 1;\n",
+        "  int n, m; cin >> n >> m;\n",
+        "  vector<vector<int>> graph(12, vector<int>(12));\n",
+        "\n",
+        "  for(int i = 0; i < m; i++){ //関係が存在する二次元配列にフラグ（1）を立てる\n",
+        "    int x, y; cin >> x >>y;\n",
+        "    x--; y--; // 配列は0スタートだから毎回デクリメント\n",
+        "    graph[x][y] = 1; graph[y][x] = 1;\n",
         "  }\n",
-        "  for (int i = 0; i < M; i++) {\n",
-        "    cin >> x >> y;\n",
-        "    x--;\n",
-        "    y--;\n",
-        "    G[x][y] = 1;\n",
-        "    G[y][x] = 1;\n",
+        "\n",
+        "  int ans = 1;\n",
+        "  for(int mask = 0; mask < (1 << n); mask++){\n",
+        "    vector<int> as;\n",
+        "    for(int i = 0; i < n; i++){\n",
+        "      if(1 & (mask >> i)) as.push_back(i);\n",
+        "    }\n",
+        "\n",
+        "    bool ok = true;\n",
+        "    for(auto i : as){\n",
+        "      for(auto j : as){\n",
+        "        if(i == j) continue;\n",
+        "        if(graph[i][j] != 1) ok = false;\n",
+        "      }\n",
+        "    }\n",
+        "\n",
+        "    if(ok) ans = max(ans, (int)as.size());\n",
         "  }\n",
-        "  rec(0);\n",
-        "  cout << ans << \"\\n\";\n",
+        "  cout << ans << endl;\n",
         "}"
       ],
       "metadata": {
-        "id": "l9EMU96lHcR0",
-        "outputId": "80c4b6e4-0482-436e-b09c-f385edd65c58",
+        "outputId": "7a27479b-fab9-4f43-dff1-45fd8f3a44e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qvloMaQZmaZC"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "---\n",
+        "# 問題 ABC002 D - 派閥 をビット演算で解く\n",
+        "# N 人の国会議員と、M 個の人間関係 (x, y) が存在します。\n",
+        "# 人間関係 (x, y) とは、議員 x と議員 y が知り合いであることを意味します。\n",
+        "# 高橋くんは N 人の議員から何人かを選んで派閥を作ろうと企んでいます。\n",
+        "# 派閥に含まれるすべての議員は互いに知り合いでなければなりません。\n",
+        "# 高橋くんが作成することができる最大の派閥に属する議員数を求めるプログラムを書いてください。\n",
+        "# 1 行目には、高橋くん以外の国会議員の数 N (1 ≦ N ≦ 12) と、\n",
+        "# 人間関係の数 M (0 ≦ M≦ N(N−1) / 2) が与えられる。\n",
+        "# 2 行目から M + 1 行目までの M 行で、人間関係が与えられる。\n",
+        "# 各議員は 1 から N までの整数で番号がつけられている。\n",
+        "# 2 行目を基準とした第 i (1 ≦ i ≦M) 行において、議員 x_i と議員 y_i は知り合いであることを意味する。\n",
+        "# 高橋くんが作成することができる最大の派閥に属する議員数を 1 行で出力してください。\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  int n, m; cin >> n >> m;\n",
+        "  vector<vector<int>> graph(12, vector<int>(12)); // 12*12 の 2次元配列\n",
+        "\n",
+        "  for(int i = 0; i < m; i++){ //関係が存在する二次元配列にフラグ（1）を立てる\n",
+        "    int x, y; cin >> x >>y;\n",
+        "    x--; y--; // 配列は0スタートだから毎回デクリメント\n",
+        "    graph.at(x).at(y) = 1; graph.at(y).at(x) = 1;\n",
+        "  }\n",
+        "\n",
+        "  int ans = 1;\n",
+        "  for(int tmp = 0; tmp < (1 << n); tmp++){ // ここが全探索なので bitset を使いたい\n",
+        "    bitset<12> bs;\n",
+        "    vector<int> as;\n",
+        "    for(int i = 0; i < n; i++){\n",
+        "      if(bs.test(i)) as.push_back(i);\n",
+        "    }\n",
+        "\n",
+        "    bool ok = true;\n",
+        "\n",
+        "    for(auto i : as){\n",
+        "      for(auto j : as){\n",
+        "        if(i == j) continue;\n",
+        "        if(graph.at(i).at(j) != 1) ok = false;\n",
+        "      }\n",
+        "    }\n",
+        "\n",
+        "    if(ok) ans = max(ans, (int)as.size());\n",
+        "  }\n",
+        "  cout << ans << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "outputId": "f242cdc7-2e90-4ee2-d28c-4d424740b83d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iNhspF5aoRMv"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "bool is_group(int N, const vector<bitset<12>> &acquaintances,\n",
+        "        const bitset<12> &choice)\n",
+        "{\n",
+        "    for (int i = 0; i < N; ++i) {\n",
+        "        if (choice.test(i) == 0)\n",
+        "            continue;\n",
+        "        if ((choice & acquaintances.at(i)) != choice)\n",
+        "            return false;\n",
+        "    }\n",
+        "    return true;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    int N, M; cin >> N >> M;\n",
+        "    vector<bitset<12>> acquaintances(N, 0);\n",
+        "    \n",
+        "    for (int i = 0; i < N; ++i)\n",
+        "        acquaintances.at(i).set(i);\n",
+        "    for (int i = 0; i < M; ++i) {\n",
+        "        int x, y;\n",
+        "        cin >> x >> y;\n",
+        "        --x; --y;\n",
+        "        acquaintances.at(x).set(y);\n",
+        "        acquaintances.at(y).set(x);\n",
+        "    }\n",
+        "    int max_cnt = 0;\n",
+        "    for (int i = 0; i < (1 << N); ++i) {\n",
+        "        bitset<12> choice(i);\n",
+        "        if (!is_group(N, acquaintances, choice))\n",
+        "            continue;\n",
+        "        int cnt = choice.count();\n",
+        "        if (max_cnt < cnt)\n",
+        "            max_cnt = cnt;\n",
+        "    }\n",
+        "    cout << max_cnt << endl;\n",
+        "}\n"
+      ],
+      "metadata": {
+        "id": "n6whv1QR5Wnh",
+        "outputId": "80c0da7e-9f72-4878-8b08-f6e016149b4e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1985,21 +2100,18 @@
       ],
       "metadata": {
         "id": "Dt2gWkDfdPhE",
-        "outputId": "d91d42ee-c846-4f28-94f8-e8f340865300",
+        "outputId": "caaa103a-153d-4e40-ca53-1682fe9311dd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3\n",
-            "2\n",
-            "4\n",
-            "1\n"
+            "3\n"
           ]
         }
       ]
