Colaboratory を使用して作成しました

--- a/cpp_atcoder100.ipynb
+++ b/cpp_atcoder100.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_atcoder100.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOiAz4BPC59eb1oFMQW0XWU",
+      "authorship_tag": "ABX9TyPEpaD6YzV5WzUwA+Hmu8RJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,147 +41,78 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
-        "id": "GSdoW040mnR6"
+        "id": "GSdoW040mnR6",
+        "outputId": "1a60de08-7cbb-49ff-9b84-66cf93b034c0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 227
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    tr td:nth-child(2) {\n",
+              "        color: red;\n",
+              "        text-align: center;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\">\n",
+              "<thead>\n",
+              "<tr><th>レーティング</th><th style=\"width:10%\" align=\"center\">色</th><th>相対的な位置</th><th>絶対的な位置</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "<tr><td>2800+</td><td>赤</td><td>上位 0.2%</td><td></td></tr>\n",
+              "<tr><td>2400-2799</td><td>橙</td><td>上位 0.6%</td><td></td></tr>\n",
+              "<tr><td>2000-2399</td><td>黄</td><td>上位 2%</td><td>アルゴリズムの研究職・研究開発で重宝されるレベル</td></tr>\n",
+              "<tr><td>1600-1999</td><td>青</td><td>上位 5%</td><td>ほとんどのIT企業でアルゴリズム能力がカンストする</td></tr>\n",
+              "<tr><td>1200-1599</td><td>水</td><td>上位 10%</td><td>半数以上のIT企業でアルゴリズム能力がカンストする</td></tr>\n",
+              "<tr><td>800-1199</td><td>緑</td><td>上位 20%</td><td>エンジニアとしてかなり優秀</td></tr>\n",
+              "<tr><td>400-799</td><td>茶</td><td>上位 35%</td><td>学生なら優秀</td></tr>\n",
+              "<tr><td>1-399</td><td>灰</td><td>上位 100%</td><td>学生なら優秀</td></tr>\n",
+              "</tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
-        ""
+        "# AtCoder のレーティング\n",
+        "%%html\n",
+        "<style>\n",
+        "    tr td:nth-child(2) {\n",
+        "        color: red;\n",
+        "        text-align: center;\n",
+        "    }\n",
+        "</style>\n",
+        "<table border=\"1\">\n",
+        "<thead>\n",
+        "<tr><th>レーティング</th><th style=\"width:10%\" align=\"center\">色</th><th>相対的な位置</th><th>絶対的な位置</th></tr>\n",
+        "</thead>\n",
+        "<tbody>\n",
+        "<tr><td>2800+</td><td>赤</td><td>上位 0.2%</td><td></td></tr>\n",
+        "<tr><td>2400-2799</td><td>橙</td><td>上位 0.6%</td><td></td></tr>\n",
+        "<tr><td>2000-2399</td><td>黄</td><td>上位 2%</td><td>アルゴリズムの研究職・研究開発で重宝されるレベル</td></tr>\n",
+        "<tr><td>1600-1999</td><td>青</td><td>上位 5%</td><td>ほとんどのIT企業でアルゴリズム能力がカンストする</td></tr>\n",
+        "<tr><td>1200-1599</td><td>水</td><td>上位 10%</td><td>半数以上のIT企業でアルゴリズム能力がカンストする</td></tr>\n",
+        "<tr><td>800-1199</td><td>緑</td><td>上位 20%</td><td>エンジニアとしてかなり優秀</td></tr>\n",
+        "<tr><td>400-799</td><td>茶</td><td>上位 35%</td><td>学生なら優秀</td></tr>\n",
+        "<tr><td>1-399</td><td>灰</td><td>上位 100%</td><td>学生なら優秀</td></tr>\n",
+        "</tbody>\n",
+        "</table>"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "アルゴリズム本を出版！（2021/12/25）\n",
-        "目次\n",
-        "初級編\n",
-        "中級編\n",
-        "上級編\n",
-        "1-1. 競プロとは何か\n",
-        "競プロの特徴：自動採点\n",
-        "どんな問題が出されるか（１）\n",
-        "どんな問題が出されるか（２）\n",
-        "1-2. 競プロの 6 つの面白さ\n",
-        "1-2-1. プログラミングスキルが向上する！\n",
-        "1-2-2. アルゴリズムが学べる！\n",
-        "1-2-3. 数学的考察力が向上する！\n",
-        "1-2-4. リアルタイムで戦える！\n",
-        "1-2-5. コミュニティーが優しい！\n",
-        "1-2-6. 就職に役立つ！\n",
-        "1-3. 早速競プロを始めてみよう\n",
-        "1-3-1. AtCoder に登録しよう！\n",
-        "1. https://atcoder.jp/ にアクセスします。\n",
-        "2. 「新規登録」をクリックします。\n",
-        "3. 様々な情報を入力します。\n",
-        "4. 登録完了です。\n",
-        "1-3-2. AOJ に登録しよう！\n",
-        "1. http://judge.u-aizu.ac.jp/onlinejudge/index.jsp?lang=ja にアクセスします。\n",
-        "2. 「登録・設定」→「登録・設定」をクリックします。\n",
-        "3. 様々な情報を入力します。\n",
-        "4. 登録完了です。\n",
-        "1-3-3. 競プロのための環境構築について\n",
-        "1-3-4. AtCoder で一問解いてみよう！\n",
-        "手順 1: 問題ページにアクセスする\n",
-        "手順 2: コードを書く\n",
-        "手順 3: 問題画面の一番下までスクロールする\n",
-        "手順 4: 提出結果を確認する\n",
-        "1-4. 競プロをやる前に| AtCoder のレーティングとは\n",
-        "AtCoder のレーティングって何？\n",
-        "AtCoder のレーティングが持つ意味\n",
-        "どうやってレーティングを見られるのか？\n",
-        "AtCoder レーティングに関する重要な注意\n",
-        "1-5. 「茶色コーダー」で要求される 4 つのこと\n",
-        "条件 1\n",
-        "条件 2\n",
-        "条件 3\n",
-        "条件 4\n",
-        "補足\n",
-        "1-6. 「茶色コーダー」になるためのガイドライン\n",
-        "1-6-1. AOJ の「Introduction To Programming I」を全部解く！\n",
-        "1-6-2. 計算量とアルゴリズムが何か理解する！\n",
-        "1-6-3. 「AtCoder Beginners Selection」を解く！\n",
-        "1-6-4. 全探索に慣れる！\n",
-        "4 種類の全探索\n",
-        "全探索の問題\n",
-        "1-6-5. コンテストに出まくる！\n",
-        "コンテストの種類 / 初心者出るべきコンテスト\n",
-        "モチベ管理こそが重要\n",
-        "1-7. Tips: AtCoder の過去問を解ける便利なサイト\n",
-        "1-8. おまけ：競プロにおける C++ のすすめ\n",
-        "C++ をすすめる理由\n",
-        "C++ 以外をやってはいけないのか\n",
-        "1-9. 本記事を終えた次は？\n",
-        "中級編\n",
-        "上級編\n",
-        "-1. つづく\n",
-        "\n",
-        "@e869120\n",
-        "投稿日 2020年02月19日\n",
-        "\n",
-        "更新日 2022年02月05日\n",
-        "\n",
-        "レッドコーダーが教える、競プロ・AtCoder上達のガイドライン【初級編：競プロを始めよう】\n",
-        "アルゴリズム\n",
-        ",\n",
-        "AtCoder\n",
-        ",\n",
-        "数学\n",
-        ",\n",
-        "競技プログラミング\n",
-        ",\n",
-        "新人プログラマ応援\n",
-        "drken\n",
-        "hiro_matsuno2\n",
-        "こんにちは、高校 2 年生の E869120 です。\n",
-        "私は競技プログラミングが趣味で、AtCoder や日本情報オリンピックなどの各種コンテストに出場しております。ちなみに、2020 年 2 月 19 日現在、AtCoder では赤（レッドコーダー）です。\n",
-        "今回は、競技プログラミング上達のためのガイドラインを記します。初級編では未経験者が競プロを始めるところからサポートしますので、是非お読みください。\n",
-        "\n",
-        "【シリーズ】\n",
-        "\n",
-        "レッドコーダーが教える、競プロ・AtCoder上達のガイドライン【初級編：競プロを始めよう】　←本記事\n",
-        "レッドコーダーが教える、競プロ・AtCoder上達のガイドライン【中級編：目指せ水色コーダー！】\n",
-        "レッドコーダーが教える、競プロ・AtCoder上達のガイドライン【上級編：目指せレッドコーダー！】\n",
-        "0. はじめに\n",
-        "皆さん、競技プログラミング (競プロ) をご存知でしょうか。\n",
-        "\n",
-        "近年、競プロの存在感が日に日に高まってきており、最近では IT 業界・大学生・中高生の間でも広まっています。\n",
-        "\n",
-        "その中でも特に、AtCoder 株式会社1　の存在感が高まっています。AtCoder は日本発のプログラミングコンテスト運営会社として 2012 年 6 月に設立されて以来、年々活動の幅を広げていきました。2017 年 9 月時点での参加者数は 37,000 人でしたが、2020 年 6 月時点では 206,000 人と、約 3 年の間に 6 倍になるなど、最近急上昇中の会社です。\n",
-        "1.png\n",
-        "最近では、AtCoderJobs といわれる、AtCoder でのコンテスト成績で就職が有利になるサービスも話題になっており、競プロの実力を上げることが直接就職に役立つようになっています。\n",
-        "\n",
-        "しかしながら、「競プロでどうやって上達すれば良いのかわからない」と思い悩んでいる方はとても多いと思います。その悩みも、実力帯ごとに異なり、\n",
-        "\n",
-        "最初に何をやれば良いのか悩んでいる競プロ未経験者もいる\n",
-        "競プロ成績上位に食い込むためには何をやれば良いのか悩んでいる人もいる\n",
-        "部活や社内などで、どういう競プロの教え方をすれば良いのか悩んでいる人もいる\n",
-        "と思います。そこで本記事では、\n",
-        "\n",
-        "競技プログラミングで実力を上げるにはどういうことを学べば良いのか、どういう練習をすれば良いのかのガイドラインをレベル別に示し、上達に役立ててもらう\n",
-        "\n",
-        "ことを最大の目標にします！\n",
-        "39.PNG\n",
-        "\n",
-        "競プロをはじめて知ったという方へ\n",
-        "(2020.2.28 追記)\n",
-        "本記事で「競技プログラミング」を初めて知ったという方もいると思います。初級編では、\n",
-        "\n",
-        "「競技プログラミング」がどういうものなのか。\n",
-        "学習していくことによって、どういうメリットがあるのか。\n",
-        "どのようにして競技プログラミングを始められるのか\n",
-        "から紹介しておりますので、ご安心ください。本教材では、仮にプログラミング未経験者であっても、競技プログラミングが始められるよう、サポートしております。\n",
-        "\n",
-        "アルゴリズム本を出版！（2021/12/25）\n",
-        "(2022.2.5 追記)\n",
-        "私は競技プログラミングで必要なアルゴリズムや数学に関する記事を、これまで Qiita に執筆してきました。それらのトピックをまとめた書籍を出版しましたので、ぜひ読んでみてください。\n",
-        "\n",
-        "Amazon｜「アルゴリズム×数学」が基礎からしっかり身につく本\n",
-        "また、「アルゴリズム×数学」の本の演習を AtCoder で進める目的でこの記事を見たという方もいると思います。この場合は本記事の「1-3. 早速競プロを始めてみよう」に AtCoder への登録方法などが記されていますので、こちらをご覧ください。\n",
-        "31.jpg\n",
-        "\n",
-        "目次\n",
         "初級編\n",
         "章\tタイトル\t備考\n",
         "0.\tはじめに\t\n",
@@ -461,6 +392,8 @@
         "800-1199\t緑\t上位 20%\tエンジニアとしてかなり優秀\n",
         "400-799\t茶\t上位 35%\t学生なら優秀\n",
         "1-399\t灰\t上位 100%\t\n",
+        "\n",
+        "\n",
         "(2020/08/03 相対的な位置を修正 (更新) しました)\n",
         "※ 絶対的な位置に関しては AtCoder 社長・chokudai さんのブログ がソースです。\n",
         "\n",
