Colaboratory を使用して作成しました

--- a/cpp_atcoder100.ipynb
+++ b/cpp_atcoder100.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_atcoder100.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPEpaD6YzV5WzUwA+Hmu8RJ",
+      "authorship_tag": "ABX9TyMmBS1wOXbfbRBCN45LkuD3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,13 +41,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 1,
       "metadata": {
         "id": "GSdoW040mnR6",
-        "outputId": "1a60de08-7cbb-49ff-9b84-66cf93b034c0",
+        "outputId": "f581cabf-d95e-466b-e709-1d448c14330c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 227
+          "height": 229
         }
       },
       "outputs": [
@@ -113,6 +113,34 @@
     {
       "cell_type": "code",
       "source": [
+        "# AtCoder の過去問を解ける便利なサイト AtCoder Problems\n",
+        "\n",
+        "\n",
+        "1-8. おまけ：競プロにおける C++ のすすめ\n",
+        "AtCoder では、様々なプログラミング言語で競技を行うことができます。実際に、\n",
+        "\n",
+        "C++14\n",
+        "Java\n",
+        "Python\n",
+        "C#\n",
+        "Ruby\n",
+        "などを含む、50種類以上のプログラミング言語で提出をすることができます。もちろん多様性はあってよいのですが、最もやりやすいのは C++ だと思います。\n",
+        "\n",
+        "C++ をすすめる理由\n",
+        "私が競プロに C++ をすすめる理由は、主に 3 つあります。\n",
+        "\n",
+        "AtCoder ユーザーの半数以上が C++ を使っている。7\n",
+        "AtCoder 公式解説のソースコード、解説記事のソースコードの大半が C++ である。\n",
+        "プログラミングコンテストチャレンジブック（蟻本）、プログラミングコンテスト攻略のためのアルゴリズムとデータ構造などの競プロ関連の本のほとんどで、サンプルソースコードとして C++ が使われている。\n",
+        "実行速度が他の言語に比べて高速であるため、競プロに有利である。実際に、Python のプログラムより C++ のプログラムの方が 4 倍以上多くのループを回せる。\n",
+        "C++ 以外をやってはいけないのか\n",
+        "プログラミング言語には多様性があるので、別に C++ 以外で競技をしても全く構いません。当然、最も書きやすい言語でコンテストに参加するのは良いことです。8\n",
+        "\n",
+        "ただ、解説記事や競プロ関連本の多くは C++ で書かれているので、競プロをやる機会に C++ を学習して、少なくとも C++ のソースコードが読めるようにした方が、やりやすいと思います。\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "初級編\n",
         "章\tタイトル\t備考\n",
         "0.\tはじめに\t\n",
@@ -602,7 +630,9 @@
         "と思う人もいるのではないでしょうか。そこで、便利なサイトを紹介します。これは、\n",
         "\n",
         "AtCoder Problems\n",
-        "です！　AtCoder で解ける過去問が表形式でまとまっているだけでなく、自分のユーザー名を入れると、自分が各問題を既に正解しているかどうかが表示されます。過去問の検索だけでなく、コンテストに向けた練習の管理にも役立ちます。皆さん積極的に使っていきましょう。\n",
+        "です！　AtCoder で解ける過去問が表形式でまとまっているだけでなく、\n",
+        "自分のユーザー名を入れると、自分が各問題を既に正解しているかどうかが表示されます。\n",
+        "過去問の検索だけでなく、コンテストに向けた練習の管理にも役立ちます。皆さん積極的に使っていきましょう。\n",
         "20.png\n",
         "\n",
         "\n",
