Colaboratory を使用して作成しました

--- a/cpp_atcoder100.ipynb
+++ b/cpp_atcoder100.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "cpp_atcoder100.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOhJMGb9PL/UcpxLZ70Yx2D",
+      "authorship_tag": "ABX9TyNhVnOBdGVV0ZF+Temw0nrU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -293,11 +292,11 @@
         "!g++ temp.cpp; echo 5 1 2 3 4 95 |./a.out #=> 0"
       ],
       "metadata": {
-        "id": "rJiHwZ6riuMG",
-        "outputId": "8745eda6-4f96-49a1-9beb-24941766304b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rJiHwZ6riuMG",
+        "outputId": "8745eda6-4f96-49a1-9beb-24941766304b"
       },
       "execution_count": 14,
       "outputs": [
@@ -362,12 +361,12 @@
         "</table>"
       ],
       "metadata": {
-        "id": "X2wkQ9EVtDGr",
-        "outputId": "8f4c1ea5-3b65-4309-809f-31aab31a9d57",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 158
-        }
+        },
+        "id": "X2wkQ9EVtDGr",
+        "outputId": "8f4c1ea5-3b65-4309-809f-31aab31a9d57"
       },
       "execution_count": 17,
       "outputs": [
@@ -415,11 +414,160 @@
       "cell_type": "code",
       "source": [
         "# 全探索に慣れる！\n",
+        "# 問題 くじびき\n",
+        "# 数字が書かれている N 枚の紙切れが袋に入っています。あなたはこの袋から紙切れを取り出し、\n",
+        "# 数字を見て袋に戻すということを 4 回行い、4 回の数字の和が M になっていれば、あなたの勝ちです。\n",
+        "# 紙切れに書かれている数字が {K_1, K_2, ..., K_N} である場合、あなたが勝つような可能性はありますか。\n",
+        "# 制約：N ≤ 50, M ≤ 10^8, Ki ≤10^8\n",
+        "# これは、1 回目に K_a、2 回目に K_b、3 回目に K_c、4 回目に K_d を取り出すとして、\n",
+        "# (a,b,c,d) のあり得る組を全通り調べる（四重ループをする）と解けます。N^4 回程度の計算が必要ですが、\n",
+        "# N ≤ 50  なので、およそ 50^4 ≒ 6.25×10^6 回のループしか回す必要がなく、実行時間制限には余裕をもって間に合います。\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "int main () {\n",
+        "    int n, m; cin >> n >> m;\n",
+        "    vector<int> vec(n);\n",
+        "    for (int i=0; i < n ; i++) {\n",
+        "        cin >> vec.at(i);\n",
+        "    }\n",
+        "    bool ans = false;\n",
+        "    \n",
+        "    for (int i=0; i < n ; i++) {\n",
+        "        for (int j=0; j < n ; j++) {\n",
+        "            for (int k=0; k < n ; k++){\n",
+        "                for (int l=0; l < n ; l++){\n",
+        "                    if (vec.at(i)+vec.at(j)+vec.at(k)+vec.at(l) == m) ans = true;\n",
+        "                }\n",
+        "            }\n",
+        "        }\n",
+        "    }\n",
+        "    if (ans) cout << \"Yes\" << endl;\n",
+        "    else cout << \"No\" << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y9rBsbf5ttWZ",
+        "outputId": "96a5d6db-18f0-4e8e-f0cb-589a24163e3e"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 3 10 1 3 5 |./a.out #=> Yes 1 1 3 5\n",
+        "!g++ temp.cpp; echo 3 9 1 3 5 |./a.out #=> No \n",
+        "!g++ temp.cpp; echo 3 9 1 3 2 |./a.out #=> Yes 3 3 2 2"
+      ],
+      "metadata": {
+        "id": "ZJt4fBzW5UBU",
+        "outputId": "eb46c5f5-58de-4f65-f611-bbffd35e5ab0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yes\n",
+            "No\n",
+            "Yes\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# これを bitset にできないか\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "int main () {\n",
+        "    int n, m; cin >> n >> m;\n",
+        "    vector<int> vec(n);\n",
+        "    for (int i=0; i < n ; i++) {\n",
+        "        cin >> vec.at(i);\n",
+        "    }\n",
+        "    bool ans = false;\n",
         "\n",
+        "    for (int temp = 0; temp < (1 << n); temp++){ // このやり方だと同じカードを拾うのが出来ていない\n",
+        "        bitset<50> bs(temp);\n",
+        "        int sum = 0;\n",
+        "        for (int i = 0; i < bs.size(); i++){\n",
+        "            if (bs.test(i)) sum += vec.at(i);\n",
+        "        }\n",
+        "        if (sum == m) ans = true;\n",
+        "        sum = 0;\n",
+        "    }\n",
         "\n",
-        "数字が書かれている N 枚の紙切れが袋に入っています。あなたはこの袋から紙切れを取り出し、数字を見て袋に戻すということを 4 回行い、4 回の数字の和が MM になっていれば、あなたの勝ちです。紙切れに書かれている数字が {K1,K2,...,KNK1,K2,...,KN} である場合、あなたが勝つような可能性はありますか。\n",
-        "制約：N≤50,M≤108,Ki≤108N≤50,M≤108,Ki≤108\n",
-        "これは、1 回目に KaKa、2 回目に KbKb、3 回目に KcKc、4 回目に KdKd を取り出すとして、(a,b,c,d)(a,b,c,d) のあり得る組を全通り調べる（四重ループをする）と解けます。N4N4 回程度の計算が必要ですが、N≤50N≤50 なので、およそ 504≒6.25×106504≒6.25×106 回のループしか回す必要がなく、実行時間制限には余裕をもって間に合います。\n",
+        "    if (ans) cout << \"Yes\" << endl;\n",
+        "    else cout << \"No\" << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "lWo-jO1t5ebs",
+        "outputId": "4243487b-ea03-4d54-a217-c885a7610c14",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 3 10 1 3 5 |./a.out #=> Yes 1 1 3 5\n",
+        "!g++ temp.cpp; echo 3 9 1 3 5 |./a.out #=> No \n",
+        "!g++ temp.cpp; echo 3 9 1 3 2 |./a.out #=> Yes 3 3 2 2"
+      ],
+      "metadata": {
+        "id": "sN53f9MH5eH4",
+        "outputId": "c89cb3a4-49bc-48dd-c721-dc3ba925773f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "No\n",
+            "Yes\n",
+            "No\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
         "そう、こういう感じで全探索の問題が解けるのです！\n",
         "\n",
@@ -571,7 +719,7 @@
         "フォロー\n"
       ],
       "metadata": {
-        "id": "y9rBsbf5ttWZ"
+        "id": "ioYv8f4h5Sox"
       },
       "execution_count": null,
       "outputs": []
