--- a/cpp_atcoder100.ipynb
+++ b/cpp_atcoder100.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_atcoder100.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNSDOJqNitc0GttXD9Xm8fC",
+      "authorship_tag": "ABX9TyNSCTOHq1iVESIob1IuaU/M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -569,7 +569,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 実験 重複あり全探索\n",
+        "# 実験 重複あり全探索 => ネットにあった例\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -601,12 +601,55 @@
         "    \n",
         "    buf.resize(size);\n",
         "    dfs(0, size, range_start, range_end);\n",
-        "\n",
-        "    return 0;\n",
         "}"
       ],
       "metadata": {
-        "id": "aH1iIKYXoISi"
+        "id": "aH1iIKYXoISi",
+        "outputId": "359e97e3-f7fe-453a-fd1c-715853c6f08f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "Bozo7GJy0qb-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "yeZH2gN03c8m"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "tHcSa5ARz4cA"
       },
       "execution_count": null,
       "outputs": []
@@ -623,6 +666,7 @@
         "工夫して探索の通り数を減らす「全探索」\n",
         "例えば、前述の問題であれば、(a,b,c)(a,b,c) の組を全通り調べ上げるとします。(a,b,c)(a,b,c) の組が決まったら、後は Ad=M−Ka−Kb−KcAd=M−Ka−Kb−Kc であるような dd が存在するか調べれば良いです。予め長さ 108108 の bool 型配列を定義し、11 以上 108108 以下の各整数が存在するかどうかを最初に記録しておけば、高速に調べられます。\n",
         "大体の場合、多重ループで上手くいきます。\n",
+        "\n",
         "ビット全探索\n",
         "多重ループではうまくいかない全探索の 1 つです。\n",
         "詳しくは、こちらの記事を参照してください。\n",
@@ -645,9 +689,11 @@
         "AtCoder Beginner Contest 150 C - Count Order　順列全探索で解けます。\n",
         "AtCoder Beginner Contest 054 C - One-stroke Path　順列全探索で解けます。\n",
         "1-6-5. コンテストに出まくる！\n",
+        "\n",
         "最後に、最も重要なことを書きます。これは、コンテストに出場することです。\n",
         "\n",
-        "AtCoder では、最初のレーティングが 0 であるため、コンテストに出場しなければレーティングが上がりません。仮に、あなたの実力が茶色コーダーの条件であるレーティング 400 より少し上だとしても、およそ 10回程度コンテストに出場しなければ茶色になれません。そのため、毎週コンテストに出続けることが重要です。\n",
+        "AtCoder では、最初のレーティングが 0 であるため、コンテストに出場しなければレーティングが上がりません。\n",
+        "仮に、あなたの実力が茶色コーダーの条件であるレーティング 400 より少し上だとしても、およそ 10回程度コンテストに出場しなければ茶色になれません。そのため、毎週コンテストに出続けることが重要です。\n",
         "\n",
         "また、コンテストに出場することで、AtCoder の問題に慣れたり、問題の感覚がつかめたりするので、結果的に実力向上に繋がります。\n",
         "\n",
@@ -672,9 +718,14 @@
         "AtCoder Beginner Contest (ABC)\t6 問\t100 分\t0 ～ 1999\n",
         "AtCoder Regular Contest (ARC)\t6 問\t120 分程度\t0 ～ 2799\n",
         "AtCoder Grand Contest (AGC)\t6 問\t150 分程度\t1200 以上（参加できるのは全員）6\n",
-        "そのうち、初心者には「AtCoder Beginner Contest」に出場することがお勧めです。その他のコンテストにも出場して良いですが、1 問しか解けなかったりしてモチベ管理が大変になる場合があります。\n",
         "\n",
-        "ちなみに、キーエンスプログラミングコンテストや、ドワンゴからの挑戦状などの企業名が付いたコンテストがありますが、基本的には ABC クラスか ARC クラスのいずれかです。「コンテスト一覧」で青丸が付いていれば ABC クラス、橙丸が付いていれば ARC クラス、赤丸が付いていれば AGC クラスです。黒丸は非公式コンテストなど、レーティングが更新されないコンテストです。\n",
+        "そのうち、初心者には「AtCoder Beginner Contest」に出場することがお勧めです。\n",
+        "その他のコンテストにも出場して良いですが、1 問しか解けなかったりしてモチベ管理が大変になる場合があります。\n",
+        "\n",
+        "ちなみに、キーエンスプログラミングコンテストや、\n",
+        "ドワンゴからの挑戦状などの企業名が付いたコンテストがありますが、\n",
+        "基本的には ABC クラスか ARC クラスのいずれかです。「コンテスト一覧」で青丸が付いていれば ABC クラス、\n",
+        "橙丸が付いていれば ARC クラス、赤丸が付いていれば AGC クラスです。黒丸は非公式コンテストなど、レーティングが更新されないコンテストです。\n",
         "36.PNG\n",
         "\n",
         "モチベ管理こそが重要\n",
@@ -682,7 +733,10 @@
         "\n",
         "コンテストで失敗してレーティングを 50 下げてしまった。\n",
         "最初の AtCoder Beginner Contest で 1 問しか正解できなかった。\n",
-        "などで、競プロをやめる人がとても多いのが現状です。実際に、AtCoder コンテストに参加したことがある人の約 6 割が参加回数 4 回以下です。でも、前述のとおり、コンテスト参加回数が多いほどレーティング中央値が上がります。人それぞれ、実力が伸びるタイミングは違いますが、モチベーションを維持して、楽しく競プロをやっていくことが大切です。\n",
+        "などで、競プロをやめる人がとても多いのが現状です。実際に、AtCoder コンテストに参加\n",
+        "したことがある人の約 6 割が参加回数 4 回以下です。でも、前述のとおり、コンテスト参加回数が多い\n",
+        "ほどレーティング中央値が上がります。人それぞれ、実力が伸びるタイミングは違いますが、モチベーショ\n",
+        "ンを維持して、楽しく競プロをやっていくことが大切です。\n",
         "\n",
         "\n",
         "1-7. Tips: AtCoder の過去問を解ける便利なサイト\n",
@@ -694,6 +748,7 @@
         "と思う人もいるのではないでしょうか。そこで、便利なサイトを紹介します。これは、\n",
         "\n",
         "AtCoder Problems\n",
+        "\n",
         "です！　AtCoder で解ける過去問が表形式でまとまっているだけでなく、\n",
         "自分のユーザー名を入れると、自分が各問題を既に正解しているかどうかが表示されます。\n",
         "過去問の検索だけでなく、コンテストに向けた練習の管理にも役立ちます。皆さん積極的に使っていきましょう。\n",
