Colaboratory を使用して作成しました

--- a/cpp_atcoder100.ipynb
+++ b/cpp_atcoder100.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_atcoder100.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNWP4f6g76LNQ+ynF+0jSrQ",
+      "authorship_tag": "ABX9TyM3uxSOlgXCKTmW0EIvX2W6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -685,52 +685,71 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "JGHWrEGFhiKX"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 上のプログラムを理解のために書き直す\n",
-        "# cout はせずに vector<int> を返す関数にしたい\n",
+        "# cout はせずに vector<int> を返す関数にしたい => とりあえず失敗!!!!\n",
+        "# 先へ進む\n",
+        "%%script false\n",
+        "\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
-        "\n",
-        "vector<int> buf;\n",
-        "\n",
-        "vector<vector<int>> dfs(int i, const int row, const int range_start, const int range_end) {\n",
-        "    vector<vector<int> result_vec(row, vector<int>(range_end - range_start);\n",
-        "    for ()\n",
-        "        if (i == row) {\n",
-        "            for(int i = 0; i < buf.row(); ++i){\n",
-        "                cout << buf[i] << \" \";\n",
-        "            }\n",
-        "            cout << endl;\n",
+        "vector<vector<int>> dfs(int i, int j, const int row, const int column, const int range_start) {\n",
+        "    vector<vector<int>> result_vec(row, vector<int>(column));\n",
+        "    if ((i == row) && (j == column)) return result_vec;\n",
+        "    else if (i == row) {\n",
+        "        j++;\n",
+        "        i = 0;\n",
+        "    } else {\n",
+        "        for(int k = range_start; k <= range_start + column; k++){\n",
+        "            result_vec.at(i).at(j) = k;\n",
+        "            result_vec += dfs(i + 1, j, row, column, range_start);\n",
         "        }\n",
-        "        else{\n",
-        "            for(int j = range_start; j <= range_end; ++j){\n",
-        "                buf[i] = j;\n",
-        "                dfs(i + 1, row, range_start, range_end);\n",
-        "            }\n",
-        "        }\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "string formatVecInt(vector<int> vec){\n",
+        "    string str = \"\";\n",
+        "    str +=\"{\";\n",
+        "    bool isFirst = true;\n",
+        "    for (auto item : vec){\n",
+        "        if(!isFirst) str += \", \";\n",
+        "        str += to_string(item);\n",
+        "        isFirst = false;\n",
+        "    };\n",
+        "    str += \"}\";\n",
+        "    return str;\n",
+        "}\n",
+        "\n",
+        "string formatVecStr(vector<string> vec){\n",
+        "    if (vec.empty()) return \"\";\n",
+        "    string str = \"\";\n",
+        "    str +=\"{\";\n",
+        "    bool isFirst = true;\n",
+        "    for (auto item : vec){\n",
+        "        if(!isFirst) str += \", \";\n",
+        "        // str = str + '\"' + item + '\"';\n",
+        "        str = str + item;\n",
+        "        isFirst = false;\n",
+        "    };\n",
+        "    str += \"}\";\n",
+        "    return str;\n",
         "}\n",
         "\n",
         "int main(void) {\n",
-        "    int row = 3;\n",
-        "    int column = 4;\n",
+        "    int row = 2;\n",
+        "    int column = 3;\n",
         "    int range_start = 1;\n",
-        "    int range_end = range_start+column;\n",
+        "\n",
         "\n",
         "    vector<vector<int>> vec(row, vector<int> (column));\n",
+        "    vec = dfs(0, 0, row, column, range_start);\n",
         "\n",
-        "    vec = dfs(0, row, range_start, range_end);\n",
+        "    vector<string> vecstr(vec.size());\n",
+        "    transform(vec.begin(), vec.end(), vecstr.begin(), formatVecInt);\n",
+        "    cout << formatVecStr(vecstr) << endl;\n",
         "}"
       ],
       "metadata": {
@@ -738,9 +757,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ab8482cc-0dd4-49e8-9223-4eada314de2b"
+        "outputId": "9311e21e-0d46-43eb-a132-01b109b8a7e2"
       },
-      "execution_count": 26,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -752,9 +771,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "JGHWrEGFhiKX"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "!g++ temp.cpp; ./a.out"
+        "!g++ -g temp.cpp; ./a.out"
       ],
       "metadata": {
         "id": "tHcSa5ARz4cA"
