--- a/cpp_atcoder100.ipynb
+++ b/cpp_atcoder100.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_atcoder100.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOIbwN5CXsWX/L9Bg+fu3q5",
+      "authorship_tag": "ABX9TyMuW+pkxNeFWmYeL0XHRFWD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -889,7 +889,7 @@
           "height": 135
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -957,10 +957,66 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# 絶対値 abs\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "    // 例 1: 2 つの小数 a と b を入力し、a-b の絶対値を小数で出力します。\n",
+        "    double a, b;\n",
+        "    cin >> a >> b;\n",
+        "    printf(\"%.12lf\\n\", abs(a - b));\n",
+        "}"
       ],
       "metadata": {
-        "id": "_126dG5NoofM"
+        "id": "aE93c93UooF7",
+        "outputId": "023e5b2e-8e9c-4840-ae17-807f6ac1cdbf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 2.81 -1.2 |./a.out"
+      ],
+      "metadata": {
+        "id": "WbAzAKxPs3LZ",
+        "outputId": "16b1f3d6-c904-4997-fb7a-94ece3b30b82",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4.010000000000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 上ｎプログラムの cout バージョン"
+      ],
+      "metadata": {
+        "id": "jbqn_yfAtMMi"
       },
       "execution_count": null,
       "outputs": []
@@ -969,164 +1025,6 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "前編：25 個の STL 機能をそれぞれ解説！ ← 今皆さんが読んでいる記事です。\n",
-        "後編：どんな場面で STL が使えるのか\n",
-        "1. はじめに\n",
-        "皆さん、C++ というプログラミング言語を使ったことがありますか？\n",
-        "\n",
-        "C++ は アルゴリズム の学習・実装の世界では最も利用者数が多い言語の一つであり、「アルゴリズムとデータ構造」などたくさんのアルゴリズム解説本において C++ のサンプルコードが書かれています。また、競技プログラミング (競プロ) において C++ は大人気であり、競技プログラマーの約半数が C++ を利用しています。1\n",
-        "\n",
-        "プログラミング言語\t提出ソースコード数\t割合（％）\n",
-        "C++ / C++14\t22,230\t51.7%\n",
-        "Python3\t10,482\t24.4%\n",
-        "PyPy3\t3,125\t7.3%\n",
-        "Java\t1,931\t4.5%\n",
-        "その他\t5,199\t12.1%\n",
-        "合計\t42,967\t100.0%\n",
-        "(AtCoder Beginner Contest 152 で提出されたソースコードの分類)\n",
-        "\n",
-        "それほど C++ が、競プロやアルゴリズムの学習に人気であるのには、以下のような理由があるのです。\n",
-        "\n",
-        "計算速度が 1 秒あたり 108～109108～109 回程度と、他のプログラミング言語に比べ高速だから。\n",
-        "基礎的文法の習得がそれほど難しくないから。\n",
-        "しかし、C++ の利点はこれだけではありません。元々用意されている標準ライブラリがあるのです。一方、標準ライブラリは C++ を学ぶ大きな障壁となるものの一つです。C++ を学ぶ上で標準ライブラリが上手く使えず挫折したという人も多いと思います。そこで本記事では、\n",
-        "\n",
-        "競技プログラミングやアルゴリズムの実装に使える 25 個の C++ 標準ライブラリと、それらの各種アルゴリズム実装への応用例\n",
-        "\n",
-        "を解説したいと思います！！！！！\n",
-        "\n",
-        "本記事を読んだら何ができるのか？\n",
-        "前編(本記事) と後編を読み、この記事でリストアップされた 25 個の C++ 標準ライブラリをすべて使えるようになれば、以下の 3 つのことができるようになると思います。\n",
-        "\n",
-        "多くのアルゴリズムを楽に実装することができる。実際に、標準ライブラリを使うのと使わないのでは、大幅に実装コード長が異なる。\n",
-        "アルゴリズム解説本・競プロの問題解説に書かれてあるほとんどのソースコードを読むことができる。実際に、「アルゴリズムとデータ構造」という本に書かれたサンプルコードの 90% 程度2は 25 個の標準ライブラリでカバーされている。\n",
-        "競技プログラミングにおいて、短く簡潔なコードを書くことができる。\n",
-        "目次\n",
-        "前編\n",
-        "章\tタイトル\t備考\n",
-        "1.\tはじめに\t\n",
-        "2.\tC++ の標準ライブラリとは？\t基本から説明していきます！\n",
-        "3.\t今回紹介する 25 個の標準ライブラリ\t本記事のメインコンテンツです！\n",
-        "4.\t皆さんの疑問　「標準ライブラリ、結局どんな場面で使えるのか？」\t\n",
-        "後編\n",
-        "章\tタイトル\t備考\n",
-        "5.\t皆さんの疑問　「標準ライブラリ、結局どんな場面で使うのか？」に対する回答 11 例\t本記事の最も面白いところです。C++ の STL がどこで使えるのか、11 例紹介します！\n",
-        "6.\tおわりに\t\n",
-        "7.\t参考文献\t\n",
-        "\n",
-        "\n",
-        "2. C++ の標準ライブラリとは？\n",
-        "「標準ライブラリ」は、以下のようなものです。\n",
-        "\n",
-        "通例的に言語の各実装に備えられているライブラリ。\n",
-        "\n",
-        "C++ というプログラミング言語には、様々な標準ライブラリ (STL) が用意されています。例えば、\n",
-        "\n",
-        "様々な計算（sin/cos/tan/平方根/累乗/…）\n",
-        "文字列操作（string）\n",
-        "ソート（sort）\n",
-        "などの便利な計算処理ができるということは、知っている人も多いと思います。\n",
-        "\n",
-        "しかし、できることはそれだけではありません。C++ には、便利機能から各種アルゴリズムまで非常に多くの標準ライブラリが備え付けられており、他のプログラミング言語に比べてもその種類の数と幅の広さはとても多いのです。競技プログラミングやアルゴリズム実装において、C++ 標準ライブラリは運命そのものなのです。\n",
-        "\n",
-        "本記事の前提\n",
-        "本記事では、C++11 以降を使うものとします。\n",
-        "\n",
-        "標準ライブラリを使う方法\n",
-        "標準ライブラリはどのような環境でも利用することができ、付属の環境をインストールする必要が一切ありません。もちろん、AtCoder や ideone.com でも使うことができます。ただし、使うためには、ソースコードの最初に以下のような文を加える必要があります。\n",
-        "\n",
-        "gcc の場合\n",
-        "\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "その他の環境の場合（Visual Studio 2019 を含む）\n",
-        "\n",
-        "#include <iostream>\n",
-        "#include <string>\n",
-        "#include <algorithm> \n",
-        "// などの必要なインクルードファイルすべて（3章の各標準ライブラリの説明でそれぞれ書いています）\n",
-        "using namespace std;\n",
-        "なお、bits/stdc++.h は、gcc で使えるとても恐ろしいインクルードファイルであり、この一文ですべての標準ライブラリを使うことができます。3\n",
-        "\n",
-        "\n",
-        "注記（中上級者向け）\n",
-        "本記事の内容から多少逸れますが、サンプルコード 2 行目の using namespace std; とは何なのか説明します。\n",
-        "\n",
-        "これを付けなければ、C++ でサポートされている各標準ライブラリに std:: を付ける必要があります。（cin の場合 std::cin、cout の場合 std::cout など。）using namespace std; の一文を書くことによって、std:: を省略することができます。（ @keymoon さんからコメントを頂きました。）\n",
-        "\n",
-        "また、一部の機能は何もインクルードすることなく使えます、と書かれておりますが、iostream などでは他の様々なファイルをインクルードしているからです。例えば、iostream をインクルードすれば、同時に utility もインクルードされたりします。 ( @TumoiYorozu さんからコメントを頂きました。)\n",
-        "\n",
-        "3. 今回紹介する 25 個の標準ライブラリ\n",
-        "本記事では、以下の 25 個の標準ライブラリを解説します。4\n",
-        "\n",
-        "導入編\n",
-        "理解するのが簡単なものが中心です。\n",
-        "多くの人は知っていると思います。\n",
-        "\n",
-        "節\t標準ライブラリ\n",
-        "3-1.\t絶対値 abs\n",
-        "3-2.\t三角関数 sin/cos/tan\n",
-        "3-3.\t文字列 string\n",
-        "初級編\n",
-        "基本的なアルゴリズムの実装に必要なライブラリです。（AtCoder の 100-300 点問題レベルでもよく使われます）\n",
-        "アルゴリズム以外の場面でも使われることが多いかもしれません。\n",
-        "\n",
-        "節\t標準ライブラリ\n",
-        "3-4.\t最大値・最小値 min/max\n",
-        "3-5.\t値の交換 swap\n",
-        "3-6.\t最大公約数 __gcd\n",
-        "3-7.\t乱数 rand\n",
-        "3-8.\t時間計測 clock\n",
-        "3-9.\t配列を逆順に並び替え reverse\n",
-        "3-10.\tソート sort\n",
-        "中級編第一部\n",
-        "基本的なアルゴリズムの実装に必要なライブラリです。（AtCoder の 200-400 点問題レベルでもよく使われます）\n",
-        "\n",
-        "節\t標準ライブラリ\n",
-        "3-11.\tvector\n",
-        "3-12.\tstack\n",
-        "3-13.\tqueue\n",
-        "3-14.\tpriority_queue\n",
-        "3-15.\tmap\n",
-        "3-16.\tlower_bound\n",
-        "3-17.\tset\n",
-        "3-18.\tpair\n",
-        "3-19.\ttuple\n",
-        "中級編第二部\n",
-        "第一部ほどではないですが使われるので、知っていて損はないでしょう。\n",
-        "AtCoder 水色～黄色の上級者でも知らないものがあるかもしれません。\n",
-        "\n",
-        "節\t標準ライブラリ\n",
-        "3-20.\tassert\n",
-        "3-21.\tcount\n",
-        "3-22.\tfind\n",
-        "3-23.\tnext_permutation\n",
-        "3-24.\t__builtin_popcount\n",
-        "3-25.\tbitset\n",
-        "なお、競技プログラミングやアルゴリズム実装に使えるものしか本記事に書かれておりませんので、ifstream や limits などといった、アルゴリズム実装とあまり関係ない標準ライブラリは書かれておりません。すべての C++ 標準ライブラリを知りたい方は、cppreference.com の記事 をご覧ください。\n",
-        "\n",
-        "3-1. 絶対値 abs\n",
-        "x の絶対値を返す関数です。\n",
-        "\n",
-        "概要\n",
-        "abs(x) = (x の絶対値) となります。例えば、\n",
-        "\n",
-        "abs(-16) = 16\n",
-        "abs(8) = 8\n",
-        "となります。また、abs 関数は int 型などの整数型だけでなく、double 型などの浮動小数点型にも対応しています。cmath をインクルードすることで使えます。\n",
-        "\n",
-        "サンプルコード\n",
-        "#include <iostream>\n",
-        "#include <cmath>\n",
-        "using namespace std;\n",
-        "\n",
-        "int main() {\n",
-        "    // 例 1: 2 つの小数 a と b を入力し、a-b の絶対値を小数で出力します。\n",
-        "    double a, b;\n",
-        "    cin >> a >> b;\n",
-        "    printf(\"%.12lf\\n\", abs(a - b));\n",
-        "    return 0;\n",
-        "}\n",
         "3-2. 三角関数 sin/cos/tan\n",
         "三角関数です。高校数学でも習ったかもしれませんが、知らない人は以下の記事をお読みください。\n",
         "\n",
@@ -2110,7 +2008,18 @@
         "コメント\n"
       ],
       "metadata": {
-        "id": "aE93c93UooF7"
+        "id": "jwAYCNZbs0us"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "eAF_gSGgrXzl"
       },
       "execution_count": null,
       "outputs": []
